--- a/variants/esp32/tlora_v2_1_16_tcxo/platformio.ini
+++ b/variants/esp32/tlora_v2_1_16_tcxo/platformio.ini
@@ -8,3 +8,27 @@ build_flags =
   -I variants/esp32/tlora_v2_1_16
   -D LORA_TCXO_GPIO=33
 upload_speed = 115200
+
+[env:tlora-v2-1-1_6-tcxo-pl]
+extends = env:tlora-v2-1-1_6-tcxo
+build_flags =
+  ${env:tlora-v2-1-1_6-tcxo.build_flags}
+  -DOLED_PL
+
+[env:tlora-v2-1-1_6-tcxo-ru]
+extends = env:tlora-v2-1-1_6-tcxo
+build_flags =
+  ${env:tlora-v2-1-1_6-tcxo.build_flags}
+  -DOLED_RU
+
+[env:tlora-v2-1-1_6-tcxo-ua]
+extends = env:tlora-v2-1-1_6-tcxo
+build_flags =
+  ${env:tlora-v2-1-1_6-tcxo.build_flags}
+  -DOLED_UA
+
+[env:tlora-v2-1-1_6-tcxo-cs]
+extends = env:tlora-v2-1-1_6-tcxo
+build_flags =
+  ${env:tlora-v2-1-1_6-tcxo.build_flags}
+  -DOLED_CS
