--- a/variants/esp32s3/ELECROW-ThinkNode-M2/platformio.ini
+++ b/variants/esp32s3/ELECROW-ThinkNode-M2/platformio.ini
@@ -5,3 +5,27 @@ build_flags =
   ${esp32s3_base.build_flags}
   -D ELECROW_ThinkNode_M2
   -I variants/esp32s3/ELECROW-ThinkNode-M2
+
+[env:thinknode_m2-pl]
+extends = env:thinknode_m2
+build_flags =
+  ${env:thinknode_m2.build_flags}
+  -DOLED_PL
+
+[env:thinknode_m2-ru]
+extends = env:thinknode_m2
+build_flags =
+  ${env:thinknode_m2.build_flags}
+  -DOLED_RU
+
+[env:thinknode_m2-ua]
+extends = env:thinknode_m2
+build_flags =
+  ${env:thinknode_m2.build_flags}
+  -DOLED_UA
+
+[env:thinknode_m2-cs]
+extends = env:thinknode_m2
+build_flags =
+  ${env:thinknode_m2.build_flags}
+  -DOLED_CS
