--- a/variants/esp32s3/diy/my_esp32s3_diy_eink/platformio.ini
+++ b/variants/esp32s3/diy/my_esp32s3_diy_eink/platformio.ini
@@ -26,3 +26,27 @@ build_flags =
   -DBOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
   -DARDUINO_USB_MODE=0
+
+[env:my-esp32s3-diy-eink-pl]
+extends = env:my-esp32s3-diy-eink
+build_flags =
+  ${env:my-esp32s3-diy-eink.build_flags}
+  -DOLED_PL
+
+[env:my-esp32s3-diy-eink-ru]
+extends = env:my-esp32s3-diy-eink
+build_flags =
+  ${env:my-esp32s3-diy-eink.build_flags}
+  -DOLED_RU
+
+[env:my-esp32s3-diy-eink-ua]
+extends = env:my-esp32s3-diy-eink
+build_flags =
+  ${env:my-esp32s3-diy-eink.build_flags}
+  -DOLED_UA
+
+[env:my-esp32s3-diy-eink-cs]
+extends = env:my-esp32s3-diy-eink
+build_flags =
+  ${env:my-esp32s3-diy-eink.build_flags}
+  -DOLED_CS
