--- a/variants/esp32s3/diy/my_esp32s3_diy_oled/platformio.ini
+++ b/variants/esp32s3/diy/my_esp32s3_diy_oled/platformio.ini
@@ -21,3 +21,27 @@ build_flags =
   -DBOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
   -DARDUINO_USB_MODE=0
+
+[env:my-esp32s3-diy-oled-pl]
+extends = env:my-esp32s3-diy-oled
+build_flags =
+  ${env:my-esp32s3-diy-oled.build_flags}
+  -DOLED_PL
+
+[env:my-esp32s3-diy-oled-ru]
+extends = env:my-esp32s3-diy-oled
+build_flags =
+  ${env:my-esp32s3-diy-oled.build_flags}
+  -DOLED_RU
+
+[env:my-esp32s3-diy-oled-ua]
+extends = env:my-esp32s3-diy-oled
+build_flags =
+  ${env:my-esp32s3-diy-oled.build_flags}
+  -DOLED_UA
+
+[env:my-esp32s3-diy-oled-cs]
+extends = env:my-esp32s3-diy-oled
+build_flags =
+  ${env:my-esp32s3-diy-oled.build_flags}
+  -DOLED_CS
