--- a/variants/esp32s3/esp32-s3-pico/platformio.ini
+++ b/variants/esp32s3/esp32-s3-pico/platformio.ini
@@ -24,3 +24,27 @@ build_flags = ${esp32s3_base.build_flags}
 lib_deps = ${esp32s3_base.lib_deps}
   zinggjm/GxEPD2@^1.6.2
   adafruit/Adafruit NeoPixel @ ^1.12.0
+
+[env:ESP32-S3-Pico-pl]
+extends = env:ESP32-S3-Pico
+build_flags =
+  ${env:ESP32-S3-Pico.build_flags}
+  -DOLED_PL
+
+[env:ESP32-S3-Pico-ru]
+extends = env:ESP32-S3-Pico
+build_flags =
+  ${env:ESP32-S3-Pico.build_flags}
+  -DOLED_RU
+
+[env:ESP32-S3-Pico-ua]
+extends = env:ESP32-S3-Pico
+build_flags =
+  ${env:ESP32-S3-Pico.build_flags}
+  -DOLED_UA
+
+[env:ESP32-S3-Pico-cs]
+extends = env:ESP32-S3-Pico
+build_flags =
+  ${env:ESP32-S3-Pico.build_flags}
+  -DOLED_CS
