--- a/variants/esp32s3/icarus/platformio.ini
+++ b/variants/esp32s3/icarus/platformio.ini
@@ -19,3 +19,27 @@ build_flags =
   -I variants/esp32s3/icarus
   -DBOARD_HAS_PSRAM
   -DARDUINO_USB_MODE=0
+
+[env:icarus-pl]
+extends = env:icarus
+build_flags =
+  ${env:icarus.build_flags}
+  -DOLED_PL
+
+[env:icarus-ru]
+extends = env:icarus
+build_flags =
+  ${env:icarus.build_flags}
+  -DOLED_RU
+
+[env:icarus-ua]
+extends = env:icarus
+build_flags =
+  ${env:icarus.build_flags}
+  -DOLED_UA
+
+[env:icarus-cs]
+extends = env:icarus
+build_flags =
+  ${env:icarus.build_flags}
+  -DOLED_CS
