--- a/variants/esp32s3/nugget_s3_lora/platformio.ini
+++ b/variants/esp32s3/nugget_s3_lora/platformio.ini
@@ -4,3 +4,27 @@ board = lolin_s3_mini
 board_level = extra
 build_flags =
   ${esp32s3_base.build_flags} -D ARDUINO_USB_CDC_ON_BOOT=1 -D PRIVATE_HW -I variants/esp32s3/nugget_s3_lora
+
+[env:nugget-s3-lora-pl]
+extends = env:nugget-s3-lora
+build_flags =
+  ${env:nugget-s3-lora.build_flags}
+  -DOLED_PL
+
+[env:nugget-s3-lora-ru]
+extends = env:nugget-s3-lora
+build_flags =
+  ${env:nugget-s3-lora.build_flags}
+  -DOLED_RU
+
+[env:nugget-s3-lora-ua]
+extends = env:nugget-s3-lora
+build_flags =
+  ${env:nugget-s3-lora.build_flags}
+  -DOLED_UA
+
+[env:nugget-s3-lora-cs]
+extends = env:nugget-s3-lora
+build_flags =
+  ${env:nugget-s3-lora.build_flags}
+  -DOLED_CS
