--- a/variants/esp32s3/seeed_xiao_s3/platformio.ini
+++ b/variants/esp32s3/seeed_xiao_s3/platformio.ini
@@ -17,3 +17,27 @@ build_flags =
   -I variants/esp32s3/seeed_xiao_s3
   -DBOARD_HAS_PSRAM 
   -DARDUINO_USB_MODE=0
+
+[env:seeed-xiao-s3-pl]
+extends = env:seeed-xiao-s3
+build_flags =
+  ${env:seeed-xiao-s3.build_flags}
+  -DOLED_PL
+
+[env:seeed-xiao-s3-ru]
+extends = env:seeed-xiao-s3
+build_flags =
+  ${env:seeed-xiao-s3.build_flags}
+  -DOLED_RU
+
+[env:seeed-xiao-s3-ua]
+extends = env:seeed-xiao-s3
+build_flags =
+  ${env:seeed-xiao-s3.build_flags}
+  -DOLED_UA
+
+[env:seeed-xiao-s3-cs]
+extends = env:seeed-xiao-s3
+build_flags =
+  ${env:seeed-xiao-s3.build_flags}
+  -DOLED_CS
