--- a/variants/esp32s3/station-g2/platformio.ini
+++ b/variants/esp32s3/station-g2/platformio.ini
@@ -20,3 +20,27 @@ build_flags =
   -DBOARD_HAS_PSRAM
   -DSTATION_G2
   -DARDUINO_USB_MODE=0
+
+[env:station-g2-pl]
+extends = env:station-g2
+build_flags =
+  ${env:station-g2.build_flags}
+  -DOLED_PL
+
+[env:station-g2-ru]
+extends = env:station-g2
+build_flags =
+  ${env:station-g2.build_flags}
+  -DOLED_RU
+
+[env:station-g2-ua]
+extends = env:station-g2
+build_flags =
+  ${env:station-g2.build_flags}
+  -DOLED_UA
+
+[env:station-g2-cs]
+extends = env:station-g2
+build_flags =
+  ${env:station-g2.build_flags}
+  -DOLED_CS
