--- a/variants/esp32s3/tbeam-s3-core/platformio.ini
+++ b/variants/esp32s3/tbeam-s3-core/platformio.ini
@@ -13,3 +13,27 @@ build_flags =
   ${esp32s3_base.build_flags} 
   -I variants/esp32s3/tbeam-s3-core
   -D PCF8563_RTC=0x51 ;Putting definitions in variant.h does not compile correctly
+
+[env:tbeam-s3-core-pl]
+extends = env:tbeam-s3-core
+build_flags =
+  ${env:tbeam-s3-core.build_flags}
+  -DOLED_PL
+
+[env:tbeam-s3-core-ru]
+extends = env:tbeam-s3-core
+build_flags =
+  ${env:tbeam-s3-core.build_flags}
+  -DOLED_RU
+
+[env:tbeam-s3-core-ua]
+extends = env:tbeam-s3-core
+build_flags =
+  ${env:tbeam-s3-core.build_flags}
+  -DOLED_UA
+
+[env:tbeam-s3-core-cs]
+extends = env:tbeam-s3-core
+build_flags =
+  ${env:tbeam-s3-core.build_flags}
+  -DOLED_CS
