--- a/variants/esp32s3/tracksenger/platformio.ini
+++ b/variants/esp32s3/tracksenger/platformio.ini
@@ -41,3 +41,27 @@ build_flags =
   -I variants/esp32s3/tracksenger/oled
   -D HELTEC_TRACKER_V1_1
   ;-D DEBUG_DISABLED ; uncomment this line to disable DEBUG output
+
+[env:tracksenger-oled-pl]
+extends = env:tracksenger-oled
+build_flags =
+  ${env:tracksenger-oled.build_flags}
+  -DOLED_PL
+
+[env:tracksenger-oled-ru]
+extends = env:tracksenger-oled
+build_flags =
+  ${env:tracksenger-oled.build_flags}
+  -DOLED_RU
+
+[env:tracksenger-oled-ua]
+extends = env:tracksenger-oled
+build_flags =
+  ${env:tracksenger-oled.build_flags}
+  -DOLED_UA
+
+[env:tracksenger-oled-cs]
+extends = env:tracksenger-oled
+build_flags =
+  ${env:tracksenger-oled.build_flags}
+  -DOLED_CS
