--- a/variants/nrf52840/Dongle_nRF52840-pca10059-v1/platformio.ini
+++ b/variants/nrf52840/Dongle_nRF52840-pca10059-v1/platformio.ini
@@ -13,3 +13,27 @@ lib_deps =
   ${nrf52840_base.lib_deps}
   zinggjm/GxEPD2@^1.6.2
 debug_tool = jlink
+
+[env:pca10059_diy_eink-pl]
+extends = env:pca10059_diy_eink
+build_flags =
+  ${env:pca10059_diy_eink.build_flags}
+  -DOLED_PL
+
+[env:pca10059_diy_eink-ru]
+extends = env:pca10059_diy_eink
+build_flags =
+  ${env:pca10059_diy_eink.build_flags}
+  -DOLED_RU
+
+[env:pca10059_diy_eink-ua]
+extends = env:pca10059_diy_eink
+build_flags =
+  ${env:pca10059_diy_eink.build_flags}
+  -DOLED_UA
+
+[env:pca10059_diy_eink-cs]
+extends = env:pca10059_diy_eink
+build_flags =
+  ${env:pca10059_diy_eink.build_flags}
+  -DOLED_CS
