--- a/variants/nrf52840/ME25LS01-4Y10TD_e-ink/platformio.ini
+++ b/variants/nrf52840/ME25LS01-4Y10TD_e-ink/platformio.ini
@@ -19,3 +19,27 @@ lib_deps =
 ; If not set we will default to uploading over serial (first it forces bootloader entry by talking 1200bps to cdcacm)
 upload_protocol = nrfutil
 ;upload_port = /dev/ttyACM1
+
+[env:ME25LS01-4Y10TD_e-ink-pl]
+extends = env:ME25LS01-4Y10TD_e-ink
+build_flags =
+  ${env:ME25LS01-4Y10TD_e-ink.build_flags}
+  -DOLED_PL
+
+[env:ME25LS01-4Y10TD_e-ink-ru]
+extends = env:ME25LS01-4Y10TD_e-ink
+build_flags =
+  ${env:ME25LS01-4Y10TD_e-ink.build_flags}
+  -DOLED_RU
+
+[env:ME25LS01-4Y10TD_e-ink-ua]
+extends = env:ME25LS01-4Y10TD_e-ink
+build_flags =
+  ${env:ME25LS01-4Y10TD_e-ink.build_flags}
+  -DOLED_UA
+
+[env:ME25LS01-4Y10TD_e-ink-cs]
+extends = env:ME25LS01-4Y10TD_e-ink
+build_flags =
+  ${env:ME25LS01-4Y10TD_e-ink.build_flags}
+  -DOLED_CS
