--- a/variants/nrf52840/MakePython_nRF52840_eink/platformio.ini
+++ b/variants/nrf52840/MakePython_nRF52840_eink/platformio.ini
@@ -16,3 +16,27 @@ lib_deps =
   zinggjm/GxEPD2@^1.6.2
 debug_tool = jlink
 ;upload_port = /dev/ttyACM4
+
+[env:makerpython_nrf52840_sx1280_eink-pl]
+extends = env:makerpython_nrf52840_sx1280_eink
+build_flags =
+  ${env:makerpython_nrf52840_sx1280_eink.build_flags}
+  -DOLED_PL
+
+[env:makerpython_nrf52840_sx1280_eink-ru]
+extends = env:makerpython_nrf52840_sx1280_eink
+build_flags =
+  ${env:makerpython_nrf52840_sx1280_eink.build_flags}
+  -DOLED_RU
+
+[env:makerpython_nrf52840_sx1280_eink-ua]
+extends = env:makerpython_nrf52840_sx1280_eink
+build_flags =
+  ${env:makerpython_nrf52840_sx1280_eink.build_flags}
+  -DOLED_UA
+
+[env:makerpython_nrf52840_sx1280_eink-cs]
+extends = env:makerpython_nrf52840_sx1280_eink
+build_flags =
+  ${env:makerpython_nrf52840_sx1280_eink.build_flags}
+  -DOLED_CS
