--- a/variants/nrf52840/MakePython_nRF52840_oled/platformio.ini
+++ b/variants/nrf52840/MakePython_nRF52840_oled/platformio.ini
@@ -10,3 +10,27 @@ lib_deps =
   ${nrf52840_base.lib_deps}
   https://github.com/meshtastic/ESP32_Codec2/archive/633326c78ac251c059ab3a8c430fcdf25b41672f.zip
 debug_tool = jlink
+
+[env:makerpython_nrf52840_sx1280_oled-pl]
+extends = env:makerpython_nrf52840_sx1280_oled
+build_flags =
+  ${env:makerpython_nrf52840_sx1280_oled.build_flags}
+  -DOLED_PL
+
+[env:makerpython_nrf52840_sx1280_oled-ru]
+extends = env:makerpython_nrf52840_sx1280_oled
+build_flags =
+  ${env:makerpython_nrf52840_sx1280_oled.build_flags}
+  -DOLED_RU
+
+[env:makerpython_nrf52840_sx1280_oled-ua]
+extends = env:makerpython_nrf52840_sx1280_oled
+build_flags =
+  ${env:makerpython_nrf52840_sx1280_oled.build_flags}
+  -DOLED_UA
+
+[env:makerpython_nrf52840_sx1280_oled-cs]
+extends = env:makerpython_nrf52840_sx1280_oled
+build_flags =
+  ${env:makerpython_nrf52840_sx1280_oled.build_flags}
+  -DOLED_CS
