--- a/variants/nrf52840/gat562_mesh_trial_tracker/platformio.ini
+++ b/variants/nrf52840/gat562_mesh_trial_tracker/platformio.ini
@@ -14,3 +14,27 @@ build_flags = ${nrf52840_base.build_flags}
 build_src_filter = ${nrf52_base.build_src_filter} +<../variants/nrf52840/gat562_mesh_trial_tracker>
 lib_deps =
   ${nrf52840_base.lib_deps}
+
+[env:gat562_mesh_trial_tracker-pl]
+extends = env:gat562_mesh_trial_tracker
+build_flags =
+  ${env:gat562_mesh_trial_tracker.build_flags}
+  -DOLED_PL
+
+[env:gat562_mesh_trial_tracker-ru]
+extends = env:gat562_mesh_trial_tracker
+build_flags =
+  ${env:gat562_mesh_trial_tracker.build_flags}
+  -DOLED_RU
+
+[env:gat562_mesh_trial_tracker-ua]
+extends = env:gat562_mesh_trial_tracker
+build_flags =
+  ${env:gat562_mesh_trial_tracker.build_flags}
+  -DOLED_UA
+
+[env:gat562_mesh_trial_tracker-cs]
+extends = env:gat562_mesh_trial_tracker
+build_flags =
+  ${env:gat562_mesh_trial_tracker.build_flags}
+  -DOLED_CS
