--- a/variants/nrf52840/heltec_mesh_pocket/platformio.ini
+++ b/variants/nrf52840/heltec_mesh_pocket/platformio.ini
@@ -28,6 +28,29 @@ lib_deps =
   lewisxhe/PCF8563_Library@^1.0.1
   https://github.com/meshtastic/GxEPD2#b202ebfec6a4821e098cf7a625ba0f6f2400292d
 
+[env:heltec-mesh-pocket-5000-pl]
+extends = env:heltec-mesh-pocket-5000
+build_flags =
+  ${env:heltec-mesh-pocket-5000.build_flags}
+  -DOLED_PL
+
+[env:heltec-mesh-pocket-5000-ru]
+extends = env:heltec-mesh-pocket-5000
+build_flags =
+  ${env:heltec-mesh-pocket-5000.build_flags}
+  -DOLED_RU
+
+[env:heltec-mesh-pocket-5000-ua]
+extends = env:heltec-mesh-pocket-5000
+build_flags =
+  ${env:heltec-mesh-pocket-5000.build_flags}
+  -DOLED_UA
+
+[env:heltec-mesh-pocket-5000-cs]
+extends = env:heltec-mesh-pocket-5000
+build_flags =
+  ${env:heltec-mesh-pocket-5000.build_flags}
+  -DOLED_CS
 
 [env:heltec-mesh-pocket-5000-inkhud]
 extends = nrf52840_base, inkhud
@@ -42,6 +65,18 @@ build_flags =
 lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${nrf52840_base.lib_deps}
+
+[env:heltec-mesh-pocket-5000-inkhud-win1250]
+extends = env:heltec-mesh-pocket-5000-inkhud
+build_flags =
+  ${env:heltec-mesh-pocket-5000-inkhud.build_flags}
+  -DINKHUD_FONT_WIN1250
+
+[env:heltec-mesh-pocket-5000-inkhud-win1251]
+extends = env:heltec-mesh-pocket-5000-inkhud
+build_flags =
+  ${env:heltec-mesh-pocket-5000-inkhud.build_flags}
+  -DINKHUD_FONT_WIN1251
 
 
 ; First prototype nrf52840/sx1262 device
@@ -88,3 +123,15 @@ build_flags =
 lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${nrf52840_base.lib_deps}
+
+[env:heltec-mesh-pocket-10000-inkhud-win1250]
+extends = env:heltec-mesh-pocket-10000-inkhud
+build_flags =
+    ${env:heltec-mesh-pocket-10000-inkhud.build_flags}
+    -DINKHUD_FONT_WIN1250
+
+[env:heltec-mesh-pocket-10000-inkhud-win1251]
+extends = env:heltec-mesh-pocket-10000-inkhud
+build_flags =
+    ${env:heltec-mesh-pocket-10000-inkhud.build_flags}
+    -DINKHUD_FONT_WIN1251
