--- a/variants/nrf52840/meshlink/platformio.ini
+++ b/variants/nrf52840/meshlink/platformio.ini
@@ -29,3 +29,27 @@ debug_tool = jlink
 ; If not set we will default to uploading over serial (first it forces bootloader entry by talking 1200bps to cdcacm)
 ; Note: as of 6/2013 the serial/bootloader based programming takes approximately 30 seconds
 ;upload_protocol = jlink
+
+[env:meshlink-pl]
+extends = env:meshlink
+build_flags =
+  ${env:meshlink.build_flags}
+  -DOLED_PL
+
+[env:meshlink-ru]
+extends = env:meshlink
+build_flags =
+  ${env:meshlink.build_flags}
+  -DOLED_RU
+
+[env:meshlink-ua]
+extends = env:meshlink
+build_flags =
+  ${env:meshlink.build_flags}
+  -DOLED_UA
+
+[env:meshlink-cs]
+extends = env:meshlink
+build_flags =
+  ${env:meshlink.build_flags}
+  -DOLED_CS
