--- a/variants/nrf52840/meshtiny/platformio.ini
+++ b/variants/nrf52840/meshtiny/platformio.ini
@@ -9,3 +9,27 @@ build_flags = ${nrf52840_base.build_flags} -Ivariants/nrf52840/meshtiny -D MESHT
 build_src_filter = ${nrf52_base.build_src_filter} +<../variants/nrf52840/meshtiny>
 lib_deps = 
   ${nrf52840_base.lib_deps}
+
+[env:meshtiny-pl]
+extends = env:meshtiny
+build_flags =
+  ${env:meshtiny.build_flags}
+  -DOLED_PL
+
+[env:meshtiny-ru]
+extends = env:meshtiny
+build_flags =
+  ${env:meshtiny.build_flags}
+  -DOLED_RU
+
+[env:meshtiny-ua]
+extends = env:meshtiny
+build_flags =
+  ${env:meshtiny.build_flags}
+  -DOLED_UA
+
+[env:meshtiny-cs]
+extends = env:meshtiny
+build_flags =
+  ${env:meshtiny.build_flags}
+  -DOLED_CS
