--- a/variants/esp32/heltec_v2.1/platformio.ini
+++ b/variants/esp32/heltec_v2.1/platformio.ini
@@ -7,3 +7,27 @@ build_flags =
   ${esp32_base.build_flags}
   -D HELTEC_V2_1
   -I variants/esp32/heltec_v2.1
+
+[env:heltec-v2_1-pl]
+extends = env:heltec-v2_1
+build_flags =
+  ${env:heltec-v2_1.build_flags}
+  -DOLED_PL
+
+[env:heltec-v2_1-ru]
+extends = env:heltec-v2_1
+build_flags =
+  ${env:heltec-v2_1.build_flags}
+  -DOLED_RU
+
+[env:heltec-v2_1-ua]
+extends = env:heltec-v2_1
+build_flags =
+  ${env:heltec-v2_1.build_flags}
+  -DOLED_UA
+
+[env:heltec-v2_1-cs]
+extends = env:heltec-v2_1
+build_flags =
+  ${env:heltec-v2_1.build_flags}
+  -DOLED_CS
