--- a/variants/esp32/tlora_v3_3_0_tcxo/platformio.ini
+++ b/variants/esp32/tlora_v3_3_0_tcxo/platformio.ini
@@ -7,3 +7,27 @@ build_flags =
   -I variants/esp32/tlora_v2_1_16
   -D LORA_TCXO_GPIO=12
   -D BUTTON_PIN=0
+
+[env:tlora-v3-3-0-tcxo-pl]
+extends = env:tlora-v3-3-0-tcxo
+build_flags =
+  ${env:tlora-v3-3-0-tcxo.build_flags}
+  -DOLED_PL
+
+[env:tlora-v3-3-0-tcxo-ru]
+extends = env:tlora-v3-3-0-tcxo
+build_flags =
+  ${env:tlora-v3-3-0-tcxo.build_flags}
+  -DOLED_RU
+
+[env:tlora-v3-3-0-tcxo-ua]
+extends = env:tlora-v3-3-0-tcxo
+build_flags =
+  ${env:tlora-v3-3-0-tcxo.build_flags}
+  -DOLED_UA
+
+[env:tlora-v3-3-0-tcxo-cs]
+extends = env:tlora-v3-3-0-tcxo
+build_flags =
+  ${env:tlora-v3-3-0-tcxo.build_flags}
+  -DOLED_CS
