--- a/variants/esp32s3/CDEBYTE_EoRa-S3/platformio.ini
+++ b/variants/esp32s3/CDEBYTE_EoRa-S3/platformio.ini
@@ -5,3 +5,27 @@ build_flags =
   ${esp32s3_base.build_flags}
   -D CDEBYTE_EORA_S3
   -I variants/esp32s3/CDEBYTE_EoRa-S3
+
+[env:CDEBYTE_EoRa-S3-pl]
+extends = env:CDEBYTE_EoRa-S3
+build_flags =
+  ${env:CDEBYTE_EoRa-S3.build_flags}
+  -DOLED_PL
+
+[env:CDEBYTE_EoRa-S3-ru]
+extends = env:CDEBYTE_EoRa-S3
+build_flags =
+  ${env:CDEBYTE_EoRa-S3.build_flags}
+  -DOLED_RU
+
+[env:CDEBYTE_EoRa-S3-ua]
+extends = env:CDEBYTE_EoRa-S3
+build_flags =
+  ${env:CDEBYTE_EoRa-S3.build_flags}
+  -DOLED_UA
+
+[env:CDEBYTE_EoRa-S3-cs]
+extends = env:CDEBYTE_EoRa-S3
+build_flags =
+  ${env:CDEBYTE_EoRa-S3.build_flags}
+  -DOLED_CS
