--- a/variants/esp32s3/bpi_picow_esp32_s3/platformio.ini
+++ b/variants/esp32s3/bpi_picow_esp32_s3/platformio.ini
@@ -14,3 +14,27 @@ build_flags =
   ${esp32_base.build_flags}
   -D PRIVATE_HW
   -I variants/esp32s3/bpi_picow_esp32_s3
+
+[env:bpi_picow_esp32_s3-pl]
+extends = env:bpi_picow_esp32_s3
+build_flags =
+  ${env:bpi_picow_esp32_s3.build_flags}
+  -DOLED_PL
+
+[env:bpi_picow_esp32_s3-ru]
+extends = env:bpi_picow_esp32_s3
+build_flags =
+  ${env:bpi_picow_esp32_s3.build_flags}
+  -DOLED_RU
+
+[env:bpi_picow_esp32_s3-ua]
+extends = env:bpi_picow_esp32_s3
+build_flags =
+  ${env:bpi_picow_esp32_s3.build_flags}
+  -DOLED_UA
+
+[env:bpi_picow_esp32_s3-cs]
+extends = env:bpi_picow_esp32_s3
+build_flags =
+  ${env:bpi_picow_esp32_s3.build_flags}
+  -DOLED_CS
