--- a/variants/esp32s3/heltec_v3/platformio.ini
+++ b/variants/esp32s3/heltec_v3/platformio.ini
@@ -8,3 +8,27 @@ build_flags =
   ${esp32s3_base.build_flags}
   -D HELTEC_V3
   -I variants/esp32s3/heltec_v3
+
+[env:heltec-v3-pl]
+extends = env:heltec-v3
+build_flags =
+  ${env:heltec-v3.build_flags}
+  -DOLED_PL
+
+[env:heltec-v3-ru]
+extends = env:heltec-v3
+build_flags =
+  ${env:heltec-v3.build_flags}
+  -DOLED_RU
+
+[env:heltec-v3-ua]
+extends = env:heltec-v3
+build_flags =
+  ${env:heltec-v3.build_flags}
+  -DOLED_UA
+
+[env:heltec-v3-cs]
+extends = env:heltec-v3
+build_flags =
+  ${env:heltec-v3.build_flags}
+  -DOLED_CS
