--- a/variants/esp32s3/heltec_vision_master_e213/platformio.ini
+++ b/variants/esp32s3/heltec_vision_master_e213/platformio.ini
@@ -21,6 +21,30 @@ lib_deps =
   lewisxhe/PCF8563_Library@^1.0.1
 upload_speed = 115200
 
+[env:heltec-vision-master-e213-pl]
+extends = env:heltec-vision-master-e213
+build_flags =
+  ${env:heltec-vision-master-e213.build_flags}
+  -DOLED_PL
+
+[env:heltec-vision-master-e213-ru]
+extends = env:heltec-vision-master-e213
+build_flags =
+  ${env:heltec-vision-master-e213.build_flags}
+  -DOLED_RU
+
+[env:heltec-vision-master-e213-ua]
+extends = env:heltec-vision-master-e213
+build_flags =
+  ${env:heltec-vision-master-e213.build_flags}
+  -DOLED_UA
+
+[env:heltec-vision-master-e213-cs]
+extends = env:heltec-vision-master-e213
+build_flags =
+  ${env:heltec-vision-master-e213.build_flags}
+  -DOLED_CS
+
 [env:heltec-vision-master-e213-inkhud]
 extends = esp32s3_base, inkhud
 board = heltec_vision_master_e213
@@ -38,3 +62,15 @@ lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${esp32s3_base.lib_deps}
 upload_speed = 921600
+
+[env:heltec-vision-master-e213-inkhud-win1250]
+extends = env:heltec-vision-master-e213-inkhud
+build_flags =
+  ${env:heltec-vision-master-e213-inkhud.build_flags}
+  -DINKHUD_FONT_WIN1250
+
+[env:heltec-vision-master-e213-inkhud-win1251]
+extends = env:heltec-vision-master-e213-inkhud
+build_flags =
+  ${env:heltec-vision-master-e213-inkhud.build_flags}
+  -DINKHUD_FONT_WIN1251
