--- a/variants/esp32s3/heltec_vision_master_e290/platformio.ini
+++ b/variants/esp32s3/heltec_vision_master_e290/platformio.ini
@@ -24,6 +24,30 @@ lib_deps =
   lewisxhe/PCF8563_Library@^1.0.1
 upload_speed = 115200
 
+[env:heltec-vision-master-e290-pl]
+extends = env:heltec-vision-master-e290
+build_flags =
+  ${env:heltec-vision-master-e290.build_flags}
+  -DOLED_PL
+
+[env:heltec-vision-master-e290-ru]
+extends = env:heltec-vision-master-e290
+build_flags =
+  ${env:heltec-vision-master-e290.build_flags}
+  -DOLED_RU
+
+[env:heltec-vision-master-e290-ua]
+extends = env:heltec-vision-master-e290
+build_flags =
+  ${env:heltec-vision-master-e290.build_flags}
+  -DOLED_UA
+
+[env:heltec-vision-master-e290-cs]
+extends = env:heltec-vision-master-e290
+build_flags =
+  ${env:heltec-vision-master-e290.build_flags}
+  -DOLED_CS
+
 [env:heltec-vision-master-e290-inkhud]
 extends = esp32s3_base, inkhud
 board = heltec_vision_master_e290
@@ -40,3 +64,15 @@ lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${esp32s3_base.lib_deps}
 upload_speed = 921600
+
+[env:heltec-vision-master-e290-inkhud-win1250]
+extends = env:heltec-vision-master-e290-inkhud
+build_flags =
+  ${env:heltec-vision-master-e290-inkhud.build_flags}
+  -DINKHUD_FONT_WIN1250
+
+[env:heltec-vision-master-e290-inkhud-win1251]
+extends = env:heltec-vision-master-e290-inkhud
+build_flags =
+  ${env:heltec-vision-master-e290-inkhud.build_flags}
+  -DINKHUD_FONT_WIN1251
