--- a/variants/esp32s3/heltec_wireless_paper/platformio.ini
+++ b/variants/esp32s3/heltec_wireless_paper/platformio.ini
@@ -22,6 +22,30 @@ lib_deps =
   lewisxhe/PCF8563_Library@^1.0.1
 upload_speed = 115200
 
+[env:heltec-wireless-paper-pl]
+extends = env:heltec-wireless-paper
+build_flags =
+  ${env:heltec-wireless-paper.build_flags}
+  -DOLED_PL
+
+[env:heltec-wireless-paper-ru]
+extends = env:heltec-wireless-paper
+build_flags =
+  ${env:heltec-wireless-paper.build_flags}
+  -DOLED_RU
+
+[env:heltec-wireless-paper-ua]
+extends = env:heltec-wireless-paper
+build_flags =
+  ${env:heltec-wireless-paper.build_flags}
+  -DOLED_UA
+
+[env:heltec-wireless-paper-cs]
+extends = env:heltec-wireless-paper
+build_flags =
+  ${env:heltec-wireless-paper.build_flags}
+  -DOLED_CS
+
 [env:heltec-wireless-paper-inkhud]
 extends = esp32s3_base, inkhud
 board = heltec_wifi_lora_32_V3
@@ -38,3 +62,15 @@ lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${esp32s3_base.lib_deps}
 upload_speed = 921600
+
+[env:heltec-vision-master-e290-inkhud-win1250]
+extends = env:heltec-vision-master-e290-inkhud
+build_flags =
+  ${env:heltec-vision-master-e290-inkhud.build_flags}
+  -DINKHUD_FONT_WIN1250
+
+[env:heltec-vision-master-e290-inkhud-win1251]
+extends = env:heltec-vision-master-e290-inkhud
+build_flags =
+  ${env:heltec-vision-master-e290-inkhud.build_flags}
+  -DINKHUD_FONT_WIN1251
