--- a/variants/nrf52840/ELECROW-ThinkNode-M1/platformio.ini
+++ b/variants/nrf52840/ELECROW-ThinkNode-M1/platformio.ini
@@ -28,6 +28,30 @@ lib_deps =
   khoih-prog/nRF52_PWM@^1.0.1
 ;upload_protocol = fs
 
+[env:thinknode_m1-pl]
+extends = env:thinknode_m1
+build_flags =
+  ${env:thinknode_m1.build_flags}
+  -DOLED_PL
+
+[env:thinknode_m1-ru]
+extends = env:thinknode_m1
+build_flags =
+  ${env:thinknode_m1.build_flags}
+  -DOLED_RU
+
+[env:thinknode_m1-ua]
+extends = env:thinknode_m1
+build_flags =
+  ${env:thinknode_m1.build_flags}
+  -DOLED_UA
+
+[env:thinknode_m1-cs]
+extends = env:thinknode_m1
+build_flags =
+  ${env:thinknode_m1.build_flags}
+  -DOLED_CS
+
 [env:thinknode_m1-inkhud]
 extends = nrf52840_base, inkhud
 board = ThinkNode-M1
@@ -46,3 +70,15 @@ lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${nrf52840_base.lib_deps}
   lewisxhe/PCF8563_Library@^1.0.1
+
+[env:thinknode_m1-inkhud-win1250]
+extends = env:thinknode_m1-inkhud
+build_flags =
+    ${env:thinknode_m1-inkhud.build_flags}
+    -DINKHUD_FONT_WIN1250
+
+[env:thinknode_m1-inkhud-win1251]
+extends = env:thinknode_m1-inkhud
+build_flags =
+    ${env:thinknode_m1-inkhud.build_flags}
+    -DINKHUD_FONT_WIN1251
