--- a/variants/nrf52840/t-echo/platformio.ini
+++ b/variants/nrf52840/t-echo/platformio.ini
@@ -24,6 +24,30 @@ lib_deps =
   lewisxhe/PCF8563_Library@^1.0.1
 ;upload_protocol = fs
 
+[env:t-echo-pl]
+extends = env:t-echo
+build_flags =
+  ${env:t-echo.build_flags}
+  -DOLED_PL
+
+[env:t-echo-ru]
+extends = env:t-echo
+build_flags =
+    ${env:t-echo.build_flags}
+    -DOLED_RU
+
+[env:t-echo-ua]
+extends = env:t-echo
+build_flags =
+  ${env:t-echo.build_flags}
+  -DOLED_UA
+
+[env:t-echo-cs]
+extends = env:t-echo
+build_flags =
+  ${env:t-echo.build_flags}
+  -DOLED_CS
+
 [env:t-echo-inkhud]
 extends = nrf52840_base, inkhud
 board = t-echo
@@ -42,3 +66,15 @@ lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${nrf52840_base.lib_deps}
   lewisxhe/PCF8563_Library@^1.0.1
+
+[env:t-echo-inkhud-win1250]
+extends = env:t-echo-inkhud
+build_flags =
+  ${env:t-echo-inkhud.build_flags}
+  -DINKHUD_FONT_WIN1250
+
+[env:t-echo-inkhud-win1251]
+extends = env:t-echo-inkhud
+build_flags =
+    ${env:t-echo-inkhud.build_flags}
+    -DINKHUD_FONT_WIN1251
