--- a/variants/nrf52840/meshtiny/platformio.ini
+++ b/variants/nrf52840/meshtiny/platformio.ini
@@ -4,8 +4,40 @@ extends = nrf52840_base
 board = meshtiny
 board_level = extra
 build_flags = ${nrf52840_base.build_flags} -Ivariants/nrf52840/meshtiny -D MESHTINY
-  -D USE_PIN_BUZZER
+  -DGPS_POWER_TOGGLE ; comment this line to disable triple press function on the user button to turn off gps entirely.
+  -DRADIOLIB_EXCLUDE_SX128X=1
+  -DRADIOLIB_EXCLUDE_SX127X=1
+  -DRADIOLIB_EXCLUDE_LR11X0=1
+  -D INPUTDRIVER_ENCODER_TYPE=2
+  -D INPUTDRIVER_ENCODER_UP=4
+  -D INPUTDRIVER_ENCODER_DOWN=26
+  -D INPUTDRIVER_ENCODER_BTN=28
+  -D USE_PIN_BUZZER=PIN_BUZZER
   -D MESHTASTIC_EXCLUDE_GPS=1
 build_src_filter = ${nrf52_base.build_src_filter} +<../variants/nrf52840/meshtiny>
 lib_deps = 
   ${nrf52840_base.lib_deps}
+
+[env:meshtiny-pl]
+extends = env:meshtiny
+build_flags =
+  ${env:meshtiny.build_flags}
+  -DOLED_PL
+
+[env:meshtiny-ru]
+extends = env:meshtiny
+build_flags =
+  ${env:meshtiny.build_flags}
+  -DOLED_RU
+
+[env:meshtiny-ua]
+extends = env:meshtiny
+build_flags =
+  ${env:meshtiny.build_flags}
+  -DOLED_UA
+
+[env:meshtiny-cs]
+extends = env:meshtiny
+build_flags =
+  ${env:meshtiny.build_flags}
+  -DOLED_CS
